# ChangeLog for x11-libs/libwnck
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/libwnck/ChangeLog,v 1.264 2011/04/10 08:39:46 ssuominen Exp $

  10 Apr 2011; Samuli Suominen <ssuominen@gentoo.org> libwnck-2.30.6.ebuild:
  Punt useless libtool file.

  27 Mar 2011; Nirbheek Chauhan <nirbheek@gentoo.org>
  -libwnck-2.30.2.ebuild, -libwnck-2.30.5.ebuild:
  Remove old

  22 Mar 2011; Brent Baude <ranger@gentoo.org> libwnck-2.30.6.ebuild:
  Marking libwnck-2.30.6 ppc stable for bug 353436

  21 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org> libwnck-2.30.6.ebuild:
  ppc64 stable wrt #353436

  09 Feb 2011; Nirbheek Chauhan <nirbheek@gentoo.org> libwnck-2.30.2.ebuild,
  libwnck-2.30.5.ebuild, libwnck-2.30.6.ebuild:
  Change SLOT from 0 to 1, new SLOT=3 ebuild coming

  30 Jan 2011; Raúl Porcel <armin76@gentoo.org> libwnck-2.30.6.ebuild:
  alpha/arm/ia64/sh/sparc stable wrt #348987

  25 Jan 2011; Jeroen Roovers <jer@gentoo.org> libwnck-2.30.6.ebuild:
  Stable for HPPA (bug #348987).

  19 Jan 2011; Markos Chandras <hwoarang@gentoo.org> libwnck-2.30.6.ebuild:
  Stable on amd64 wrt bug #348987

  18 Jan 2011; Christian Faulhammer <fauli@gentoo.org>
  libwnck-2.30.6.ebuild:
  x86 stable, bug 348987

  14 Jan 2011; Gilles Dartiguelongue <eva@gentoo.org> libwnck-2.30.6.ebuild:
  Pin glib/gtk+ to slot 2.

*libwnck-2.30.6 (04 Dec 2010)

  04 Dec 2010; Pacho Ramos <pacho@gentoo.org>
  -files/libwnck-2.26.2-fix-glib-mkenums.diff, -libwnck-2.28.0.ebuild,
  +libwnck-2.30.6.ebuild:
  Version bump with bugfixes and translation updates, remove old.

  17 Oct 2010; Raúl Porcel <armin76@gentoo.org> libwnck-2.30.2.ebuild:
  alpha/ia64/sh/sparc stable wrt #324077

  14 Oct 2010; Markus Meier <maekke@gentoo.org> libwnck-2.30.2.ebuild:
  arm stable, bug #324077

  08 Oct 2010; Gilles Dartiguelongue <eva@gentoo.org>
  -libwnck-2.26.2-r2.ebuild, -files/libwnck-2.26.2-automagic.patch,