@@ -1,14 +1,26 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA1
 
 DIST libwnck-2.30.6.tar.bz2 724558 RMD160 d9c228bfe1257de9b1b1e8a3fc3b8c38d6e665d9 SHA1 a7ef8842f85249878fd0389ae6c1b303d41e9623 SHA256 4d25984ed5cfe215eb650f960de634300a6cafc9d98bbc7caea8043b7cd96cc5
-EBUILD libwnck-2.30.6.ebuild 1520 RMD160 965680a58e93330e0e839ecf8aa2675f6e52d53d SHA1 5d0adf936eebb9945cc8e82610374fe37dc06e90 SHA256 db862a08bbf91e37ef11c23d04b0a7ad648c033c46370d336ec9b48f163f1b53
-MISC ChangeLog 32223 RMD160 b039af95b252286c5e66fa0b8e90a01d2d562638 SHA1 5d84333664ea24ac81a0f77a88fe93f37a4f4706 SHA256 2c1848a6b810941cdc6d1f3de24074047d24e1fdf6652806c86517fd1b8a7754
+DIST libwnck-3.0.0.tar.bz2 750209 RMD160 a5d1ddb628ecbb8b873521c7a17878291235f5e2 SHA1 add9f12668d688808b882a37a7b24863cbf21581 SHA256 bc34093ad185bb5086e97226f36157a6dd205623d32bdef71261a8b248a41f15
+EBUILD libwnck-2.30.6.ebuild 1456 RMD160 28e0552cb53b27136a91dfdb17c68beda55cfaba SHA1 f8e2c791b66883d05bbf9681fcc43100ac365dc9 SHA256 a900cbb1b251c8164674793f7a6a04858a66fbff7d025238ddbebf180ced048b
+EBUILD libwnck-3.0.0.ebuild 1668 RMD160 70f779f37bb7acbf6840b925cede076923599e9b SHA1 f864ade40c79d0554eeb4044800290d2e595681d SHA256 bce067e346e5673c170490551b3804858998bc5329790016b2d61263a8daf094
+MISC ChangeLog 32427 RMD160 985307ed2f94513ae08c8b5461a9f9ffd0f1d263 SHA1 f4c7c04adc04ada5cb46d1482ec6b5509818eb5f SHA256 b90bcc4519a87a495c5790b4921c818c84d5e884e8cdb08f2e2a8e337c01c16f
 MISC metadata.xml 277 RMD160 2ffb105a089a3b759ddef20bf72b06362a1d1c63 SHA1 82aa8cfe90fb0c9f7c02f295d2802d41ad2af380 SHA256 3d52f90556a9db4ad09f2fbe34e2d25b21f345e474e829ac84669d49cb64c8bb
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk2hbNwACgkQXkR9YqOcLPFgUAEAh6j+IlkrYHnJTOtN5NzqZyQj
-R8sHcyHRCde1bvzmg8UA/R1mKdhy4Wo93fX/mhsM+11J5mBJ1OeH5abcx01p0nFL
-=ZUG6
+iQIcBAEBAgAGBQJNvYJdAAoJEO/kOhxWD91kc/kP/jyX4bNeD16T+5Zewe8nO7oQ
+tnl4bWd1uMC8kH5XV0IXmnhj0qQR1QWrT5kdzwrq+JIPDb3rDu6+dyeJBCBeYnMe
+w6YMukfr+bmzFuw/lGV8rEh+pq/OyY0pHnaiJPKbhBQi9BkjyIssBIU+4U43rVWM
+EEWObF9n29VgmirS9PGmvTu3omX7vLGLENbA1WKGSnqa5zVJDMY/rFz/Dk3DbctI
+GH/AjxmseGhPo9dsPbuPKwO109sWzw6bQZPijBz+4GiXHz/gDIVDofWaTteE88CG
+EOrw4z45V+GQuzJGdpKjzDKGfBKHrdqf1jc55gbbSQrVKP8y1PrzWdA+kwF168EC
+KOpjVA6gPHD0Ne9PZHfWksXElLryppr7jZpBbFTe3EBzTADMWHFDPTioqyp6DJYq
+JnVeW3/Cx6fA1I11pShxlECKmkprmeN5sJt6yklcjIS9Oa91c/GVpspiwsW5VoAi
+3irnBvpPI8Kb9lJpkI7iJvDHsWQLtQhOWtATtr8p4xQWkecRaZJMVOGILeDKd2VJ
+ZvRsKPSFXEhtTZIh79aPo0/9+qkbzD03ifZn6KV7hfflU0ErpNNJfHzLNgNekQ0z
+0uWSS/eoRQ9aDhqPNCDGg7oHgqh/GBPIV7CsGSAkP7K+NRLP3rrgbEr4hA1oFU97
+WcMeSBHXpmz0TswQX25L
+=yWbW
 -----END PGP SIGNATURE-----
