@@ -1,6 +1,12 @@
 # ChangeLog for x11-libs/libwnck
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libwnck/ChangeLog,v 1.264 2011/04/10 08:39:46 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libwnck/ChangeLog,v 1.265 2011/05/01 15:55:03 nirbheek Exp $
+
+*libwnck-3.0.0 (01 May 2011)
+
+  01 May 2011; Nirbheek Chauhan <nirbheek@gentoo.org> libwnck-2.30.6.ebuild,
+  +libwnck-3.0.0.ebuild:
+  Move libwnck:3 from the gnome overlay to the tree, use GNOME2_LA_PUNT
 
   10 Apr 2011; Samuli Suominen <ssuominen@gentoo.org> libwnck-2.30.6.ebuild:
   Punt useless libtool file.
